--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>I'm ANSUMAN</h1>
     <p>A Professional Coder</p>
 
-    <img class="cloud-2" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\cloud-computing.png" alt="cloud-image">
+    <img class="cloud-2" src="cloud-computing.png" alt="cloud-image">
     <img class="programer" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\programer.png" alt="coder-image">
 
 
