--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>ANSUMAN SAHOO</title>
 
-  <link rel="stylesheet" href="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\ANSUMAN.css">
-   <link rel="shortcut icon" href="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\A.jpg" type="image/x-icon">
+  <link rel="stylesheet" href="ANSUMAN.css">
+   <link rel="shortcut icon" href="A.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -14,15 +14,15 @@
   <div class="TOP">
 
 
-    <img class="cloud-0 cloud-00" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\cloud-computing.png" alt="cloud-image">
+    <img class="cloud-0 cloud-00" src="cloud-computing.png" alt="cloud-image">
 
-    <img class="cloud-1" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\cloud-computing.png" alt="cloud-image">
+    <img class="cloud-1" src="cloud-computing.png" alt="cloud-image">
 
     <h1>I'm ANSUMAN</h1>
     <p>A Professional Coder</p>
 
     <img class="cloud-2" src="cloud-computing.png" alt="cloud-image">
-    <img class="programer" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\programer.png" alt="coder-image">
+    <img class="programer" src="programer.png" alt="coder-image">
 
 
   </div>
@@ -36,7 +36,7 @@
 
   <div class="JAVA">
 
-    <img class="LIMAGE" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\java.png" alt="JAVA-IMAGE">
+    <img class="LIMAGE" src="java.png" alt="JAVA-IMAGE">
 
     <p class="PARA">JAVA</p>
 
@@ -44,7 +44,7 @@
 
   <div class="ML">
 
-    <img class="RIMAGE" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\ML.png" alt="ML-IMAGE">
+    <img class="RIMAGE" src="ML.png" alt="ML-IMAGE">
 
     <p class="PARA">MACHINE LEARNING</p>
 
@@ -52,7 +52,7 @@
 
   <div class="FULLSTACK">
 
-    <img class="LIMAGE" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\Full-Stack-Developer.jpg" alt="ML-IMAGE">
+    <img class="LIMAGE" src="Full-Stack-Developer.jpg" alt="ML-IMAGE">
 
     <p class="PARA">FULLSTACK</p>
 
@@ -61,14 +61,14 @@
 
   <div class="PYTHON"">
 
-      <img class="RIMAGE" src="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\CSS\python.png" alt="ML-IMAGE">
+      <img class="RIMAGE" src="python.png" alt="ML-IMAGE">
 
       <p class="PARA" class="PYTHON">PYTHON</p>
 
   </div>
 
   <div class="footer">
-    <a href="C:\Users\KIIT\Desktop\WEB DEVELOPMENT\HTML CODE\CONTACTDETAILS.html">CONTACT</a>
+    <a href="CONTACTDETAILS.html">CONTACT</a>
   </div>
 
 
