--- a/CONTACTDETAILS.html
+++ b/CONTACTDETAILS.html
@@ -14,7 +14,7 @@
     <div class="CONTACT">
 
 
-        <h1 class="first">EMAIL:  ansuman0sahoo00@gmail.com</h1>
+        <h1 class="first">EMAIL:  ansuman0sahoo@gmail.com</h1>
         <h1>PHONE NUMBER:  8637206203</h1>
         <h1>LOCATION:  BHUBANESWAR</h1>
 
